--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BananaWebapp</title>
+  <title>Banana Ltda.</title>
   <base href="/">
 
   <meta name="viewport"
